--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,18 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="description" content="Hi, I am Ferdinand Belleza Estoque a.k.a. Black Raven, I design and build functional websites and this is my website portfolio." />
+    <meta name="keywords" content="Ferdinand Estoque, Ferdinand Belleza Estoque, Estoque, Black Raven Estoque, Raven Estoque" />
+    <meta name="author" content="Ferdinand Estoque" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css?family=Orbitron:400,500,700,900"
       rel="stylesheet"
     />
     <link rel="icon" href="./favicon.ico" />
     <title>Ferdinand Estoque React-Portfolio</title>
     <style>
       * {
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Orbitron', sans-serif;
         margin: 0;
       }
     </style>
